--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,9 +12,52 @@ body {
   line-height: 1.5;
 }
 
+img {
+  object-fit: cover;
+}
+
 #search-box {
   font: inherit;
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+  padding: 10px 0px;
+  background-color: #24308e;
+  gap: 10px;
+}
+
+.load-more.hidden {
+  display: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.photo-card {
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
+    0px 2px 1px rgb(0 0 0 / 20%);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.info {
+  margin: 15px;
+}
+.load-more {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
